--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ gems:
 permalink:           pretty
 
 # Setup
-url:                 http://qwtel.com
+url:                 http://yongchol.github.io
 
 # Set to '' in case of hosting on GitHub pages,
 # i.e. `http://<username>.github.io`
-baseurl:             /hydejack
+baseurl:             ''
 
-title:               Hydejack
+title:               Roy's dev note
 
 # Pagination
 paginate:            5
@@ -21,15 +21,12 @@ paginate_path:       '/page-:num/'
 
 # Markdown enabled, however don't use more than one paragraph (enforced by `>`)
 description:         >
-  A pretentious two-column [Jekyll](http://jekyllrb.com/) theme, stolen by [`@qwtel`{:style="background: rgba(255, 255, 255, 0.15)"}](https://twitter.com/qwtel)
-  from [Hyde](http://hyde.getpoole.com).
-  You could say it was.. [hydejacked](http://media3.giphy.com/media/makedRIckZBW8/giphy.gif).
-
+  dreaming the day better than yesterday.
 # The tags listed as entries in the sidebar
-sidebar_tags:        [jekyll, hyde]
+sidebar_tags:        [spring, nodejs, python, think]
 
 # Fallback image and color if not overwritten for tag or post
-image:               /hydejack/public/img/nap.jpg
+image:               /public/img/home.jpg
 color:               '#A85641'
 
 # Fonts
@@ -39,64 +36,34 @@ load_google_fonts:   'Roboto+Slab:700|PT+Serif:400,400italic,700,700italic'
 
 # About yourself
 author:
-  name:              'Florian Klampfer'
+  name:              'Roy'
 
   # This photo will be used in the about section
-  photo:             http://qwtel.com/public/img/flo.jpg
-  photo2x:           http://qwtel.com/public/img/flo@2x.jpg
+  photo:             /public/img/profile.jpg
 
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Hi, I'm Florian or [`@qwtel`](https://www.twitter.com/qwtel), which isn't an acronym,
-    I just [wanted a short username](http://qwtel.com/how-to-find-a-short-username) and that one happened to be available.
-
-    Read my thoughts on [#software](http://qwtel.com/tag/software) and [#cryptoeconomics](http://qwtel.com/tag/cryptoeconomics).
-
+    updated soon .
+    
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    facebook:        _username_
-    twitter:         _username_
-    google:          _number_
-    vk:              _username_
-    youtube:         _string___string___string_
-    # vimeo:           _username_
-    # vine:            _username_
-    # spotify:         user/_number_
-    # soundcloud:      _username_
-    # lastfm:          _username_
+    #facebook:        yongchol.shin.7
+    # twitter:         _username_
+    # google:          _number_
     # instagram:       _username_
-    # flickr:          _string_@_string_
-    # 500px:           _username_
-    # dribbble:        _username_
-    # behance:         _username_
-    # deviantart:      _username_
-    # ello:            _username_
-    # twitch:          _username_
-    # steam:           _number_
-    # reddit:          _username_
-    # tumblr:          _username_
-    # pinterest:       _username_
-    # foursquare:      _number_
-    # yelp:            _string_
-    # github:          _username_
+    github:          yongchol
     # stackoverflow:   _number_/_username_
     # npm:             _username_
     # hackernews:      _username_
-    # trello:          _firstname__lastname_
     # linkedin:        _firstname_-_lastname_-_string_
-    # xing:            _firstname___lastname__counter_
-    # blogger:         _number_
-    # delicious:       _username_
-    # stumbleupon:     _username_
-    # paypal:          _username_
 
 # Remove to disable Google Anaylics
-google_analytics_id: 'UA-84025722-2'
+#google_analytics_id: 'UA-84025722-2'
 
 # Setting a disqus subdomain will enable the comment section
-# disqus:            <username>
+  disqus:            yongchol
 
 kramdown:
   math_engine:       mathjax
