--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -11,17 +11,18 @@
 #     *My Tag* is an example of how to define a custom tag.
 # ~~~
 
-hyde:
-  name: Hyde
-  image: /hydejack/public/img/hyde.jpg
-  color: '#949667'
-  description: >
-    Hyde is a brazen two-column Jekyll theme that pairs a prominent sidebar with uncomplicated content.
-    It’s based on Poole, the Jekyll butler.
+think:
+  name: think
+  image: /public/img/home.jpg
 
-jekyll:
-  name: Jekyll
-  image: /hydejack/public/img/jekyll.jpg
-  color: '#949667'
-  description: >
-    Jekyll is a static site generator, an open-source tool for creating simple yet powerful websites of all shapes and sizes.
+nodejs:
+  name: nodejs
+  image: /public/img/home.jpg
+
+spring:
+  name: spring
+  image: /public/img/home.jpg
+
+python:
+  name: python
+  image: /public/img/home.jpg
