--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
 #google_analytics_id: 'UA-84025722-2'
 
 # Setting a disqus subdomain will enable the comment section
-  disqus:            yongcholgithubio
+  disqus:            yongchol
 
 kramdown:
   math_engine:       mathjax
