--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
 # Setting a disqus subdomain will enable the comment section
   disqus:            yongchol
 
-kramdown:
+#kramdown:
   math_engine:       mathjax
   math_engine_opts:
     preview:         true
